--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,23 +8,23 @@
   "theme_color": "#6A478F",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/favicon.ico",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/favicon.ico",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-maskable-192x192.png",
+      "src": "/favicon.ico",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icons/icon-maskable-512x512.png",
+      "src": "/favicon.ico",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
